--- a/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
+++ b/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<script src="~/js/site.js" asp-append-version="true"></script>
 	@await RenderSectionAsync("Scripts", required: false)
-	<title>@ViewData["Title"] - _8INF957_MS_TP2</title>
+	<title>@ViewData["Title"] - TP2 8INF957 MS</title>
 </head>
 <body>
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container-fluid">
-				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">_8INF957_MS_TP2</a>
+				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TP2 8INF957 MS</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -20,10 +20,13 @@
 				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 					<ul class="navbar-nav flex-grow-1">
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+							<a class="nav-link" asp-controller="Home" asp-action="Informations">Informations</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+							<a class="nav-link" asp-controller="Home" asp-action="Diagnostique">Diagnostique</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" asp-controller="Home" asp-action="ConfigurationIA">Configuration IA</a>
 						</li>
 					</ul>
 				</div>
@@ -38,7 +41,7 @@
 
 	<footer class="border-top footer text-muted">
 		<div class="container">
-			&copy; 2022 - _8INF957_MS_TP2 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+			&copy; 2022 - TP2 8INF957 MS
 		</div>
 	</footer>
 </body>
