--- a/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
+++ b/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+<!DOCTYPE html>
 <html lang="fr-ca">
 <head>
 	<meta charset="utf-8" />
