connexion et informations crééer un compte

--- a/8INF957-MS_TP2/Views/Home/Connexion.cshtml
+++ b/8INF957-MS_TP2/Views/Home/Connexion.cshtml
@@ -11,5 +11,21 @@
 
      </title>
  </HEAD>
- <BODY>Contenu de la page</BODY>
+ <BODY>
+     <form style="text-align :center">
+         <div>
+             <label for="Medecin">Medecin</label>
+         <select>
+            <option value="1">1</option>
+             <option value="2">2</option>
+         
+         </select><br /><br />
+        </div>
+
+<input type="submit" value="Se connecter"/><br /><br />
+<button>
+    <a href="~/Home/CreerCompte">Créer un compte</a>
+</button>
+     </form>
+ </BODY>
 </HTML>
