--- a/8INF957-MS_TP2/Views/Home/AjoutPatient.cshtml
+++ b/8INF957-MS_TP2/Views/Home/AjoutPatient.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <form>
-    div>
+    <div>
         <label for="Nom">Nom</label>
         <input type="text" value="Nom" placeholder="Nom"/>
     </div><br />
@@ -13,4 +13,35 @@
         <label for="Prénom">Prénom</label>
         <input type="text" value="Prénom" placeholder="Prénom"/>
     </div><br />
+    <div>
+
+        <label for="DateNaissance">Date Naissance</label>
+        <input type="text" value="DateNaissance" placeholder="Date"/>
+    </div><br />
+    <div>
+
+        <label for="genre">Je suis</label>
+        <input type="radio" name="genre" value="Homme"> Homme
+        <input type="radio" name="genre" value="femme"> femme
+    </div><br />
+     <div>
+        
+             <label for="Ville">Ville</label>
+         <select>
+            <option value="Rimouski">Rimouski</option>
+             <option value="Montreal">Montreal</option>
+         
+         </select>
+    </div>
+    <div>
+        <label for="Dernier_Diagnostique">Dernier diagnostique</label>
+        <input type="text" value="Dernier_Diagnostique" placeholder="Présence/abscence de maladie"/>
+    </div><br />
+    <div>
+            <button type="submit" value="Créer" >Créer</button>
+        </div>
+
+         <div>
+            <button type="submit" value="Quitter" >Quitter</button>
+        </div>
 </form>
