--- a/8INF957-MS_TP2/Views/Home/Informations.cshtml
+++ b/8INF957-MS_TP2/Views/Home/Informations.cshtml
@@ -48,11 +48,11 @@
     </div><br />
     
         <div>
-            <button type="submit" value="Modifier" />
+            <button type="submit" value="Modifier">Modifier<</button>/>
         </div>
 
          <div>
-            <button type="submit" value="Annuler" />
+            <button type="submit" value="Annuler" >Annuler</button>
         </div>
 </form>
 
