--- a/8INF957-MS_TP2/Views/Home/ConfigurationIA.cshtml
+++ b/8INF957-MS_TP2/Views/Home/ConfigurationIA.cshtml
@@ -1,8 +1,37 @@
-﻿
-@{
-    ViewData["Title"] = "ConfigurationIA";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿@{
+	ViewData["Title"] = "ConfigurationIA";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>ConfigurationIA</h1>
+<h1>Configuration IA</h1>
+
+<form>
+	<fieldset class="border p-2 mb-3">
+		<legend class="float-none w-auto">Données</legend>
+		<div class="mb-3">
+			<label for="reference-data">Données de références</label>
+			<button id="reference-data">Parcourir...</button>
+		</div>
+		<div class="mb-3">
+			<label for="evaluation-data">Données d'évaluation</label>
+			<button id="evaluation-data">Parcourir...</button>
+		</div>
+	</fieldset>
+	<fieldset class="border p-2 mb-3">
+		<legend class="float-none w-auto">Paramètres</legend>
+		<div class="mb-3">
+			<label for="k">Paramètre k</label>
+			<input id="k" type="number" min="0" step="1" />
+		</div>
+		<div class="mb-3">
+			<label for="distance-type">Type de distance</label>
+			<select id="distance-type"></select>
+		</div>
+	</fieldset>
+	<div class="mb-3">
+		<button>Évaluer</button>
+		<label for="recognition-rate">Taux de reconnaissance :</label>
+		<span>%</span>
+	</div>
+</form>
 
