--- a/8INF957-MS_TP2/Views/Home/AjoutPatient.cshtml
+++ b/8INF957-MS_TP2/Views/Home/AjoutPatient.cshtml
@@ -2,27 +2,29 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+   // @ViewBag.Title="Ajouter un patient";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<form>
-    <div>
+<form style="margin : 60px" class="form">
+    <div class="form-group">
         <label for="Nom">Nom</label>
-        <input type="text" value="Nom" placeholder="Nom"/>
+        <input type="text" id="Nom" class="form-control" placeholder="Nom"/>
     </div><br />
-      <div>
+      <div class="form-group">
 
         <label for="Prénom">Prénom</label>
-        <input type="text" value="Prénom" placeholder="Prénom"/>
+        <input type="text" id="Prénom" class="form-control" placeholder="Prénom"/>
     </div><br />
-    <div>
+    <div class="form-group" >
 
         <label for="DateNaissance">Date Naissance</label>
-        <input type="text" value="DateNaissance" placeholder="Date"/>
+        <input type="text" id="DateNaissance" class="form-control"  placeholder="Date"/>
     </div><br />
     <div>
 
         <label for="genre">Je suis</label>
-        <input type="radio" name="genre" value="Homme"> Homme
-        <input type="radio" name="genre" value="femme"> femme
+        <input type="radio" name="genre" id="Homme"> Homme
+        <input type="radio" name="genre" id="femme"> femme
     </div><br />
      <div>
         
@@ -37,11 +39,9 @@
         <label for="Dernier_Diagnostique">Dernier diagnostique</label>
         <input type="text" value="Dernier_Diagnostique" placeholder="Présence/abscence de maladie"/>
     </div><br />
-    <div>
-            <button type="submit" value="Créer" >Créer</button>
-        </div>
-
-         <div>
-            <button type="submit" value="Quitter" >Quitter</button>
+        <div class="mb-3">
+            <button type="submit" value="Ajouter" class="btn btn-secondary" style="background-color :green">Ajouter</button>
+                 
+            <button type="submit" value="Quitter" class="btn btn-secondary" style="background-color :green" >Quitter</button>
         </div>
 </form>
