Controleur Entity Framework pour doctor et patient

--- a/8INF957-MS_TP2/Views/Home/CreerCompte.cshtml
+++ b/8INF957-MS_TP2/Views/Home/CreerCompte.cshtml
@@ -15,7 +15,7 @@
 </html>*@
 
 
-<form style="margin: 60px" class="form">
+<form style="margin: 60px" class="form" asp-action="Cr">
     <div class="form-group">
         <label  for="Nom">Nom</label>
         <input  type="text" id="Nom"  placeholder="Nom" class = " form-control" />
