--- a/8INF957-MS_TP2/Views/Home/CreerCompte.cshtml
+++ b/8INF957-MS_TP2/Views/Home/CreerCompte.cshtml
@@ -9,7 +9,7 @@
 }
 @model _8INF957_MS_TP2.Models.Doctor
 
-<form style="margin: 60px" class="form" asp-action="Add">
+<form style="margin: 60px" class="form" asp-action="CreerCompte">
     <div class="form-group">
         <label  for="Nom" asp-for="LastName">Nom</label>
         <input  type="text" asp-for="LastName" id="lastName"  placeholder="Nom" class = " form-control" />
