--- a/8INF957-MS_TP1/TP1_app_BLP/App.xaml
+++ b/8INF957-MS_TP1/TP1_app_BLP/App.xaml
@@ -5,12 +5,15 @@
              StartupUri="Views/Connexion.xaml">
     <Application.Resources>
         <Style TargetType="{x:Type Label}">
-            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Margin" Value="0"/>
         </Style>
         <Style TargetType="{x:Type Button}">
             <Setter Property="Margin" Value="5"/>
         </Style>
         <Style TargetType="{x:Type ComboBox}">
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+        <Style TargetType="{x:Type StackPanel}">
             <Setter Property="Margin" Value="5"/>
         </Style>
     </Application.Resources>
