--- a/8INF957-MS_TP1/TP1_app_BLP/Views/Connexion.xaml
+++ b/8INF957-MS_TP1/TP1_app_BLP/Views/Connexion.xaml
@@ -1,48 +1,31 @@
-﻿<Window x:Class="TP1_Projet.Views.Connexion"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:TP1_Projet.Views"
-      mc:Ignorable="d"
-      Title="Connexion">
-    <Grid>
-        <Grid.RowDefinitions >
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
-
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="0" Grid.Column="0">
-            <Label Content="Médecin" HorizontalAlignment="Left" FontSize="22" Margin="10,10,0,0" Height="39"/>
-            <ComboBox
-                HorizontalAlignment="Left"
-                FontSize="22"
-                Margin="10,10,0,0"
-                Height="39"
-                Width="260"
-                ItemsSource="{Binding Doctors}"
-                SelectedItem="{Binding SelectedDoctor}"/>
-
+﻿<Window
+    x:Class="TP1_Projet.Views.Connexion"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:local="clr-namespace:TP1_Projet.Views"
+    mc:Ignorable="d"
+    Title="Connexion"
+    SizeToContent="WidthAndHeight">
+    <StackPanel Orientation="Vertical">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+            <Label>Nom d'utilisateur :</Label>
+            <TextBox VerticalAlignment="Center" Width="200" />
         </StackPanel>
-        <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Grid.Row="1">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+            <Label>Mot de passe :</Label>
+            <TextBox VerticalAlignment="Center" Width="200" />
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
             <Button
                 Content="Se Connecter"
-                Height="51"
-                FontSize="22"
-                Width="376"
                 IsDefault="true"
                 Command="{Binding Connect}"
                 CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}"/>
             <Button
                 Content="Créer un Compte"
-                VerticalAlignment="Center"
-                Height="51"
-                Width="376"
-                FontSize="22"
-                Margin="0,40,0,0"
                 Command="{Binding CreateAccount}"/>
         </StackPanel>
-
-
-    </Grid>
+    </StackPanel>
 </Window>
