--- a/8INF957-MS_TP1/TP1_app_BLP/Views/UserControls/ConfigIaUserControl.xaml
+++ b/8INF957-MS_TP1/TP1_app_BLP/Views/UserControls/ConfigIaUserControl.xaml
@@ -77,7 +77,7 @@
                 X1="10" Y1="60"
                 X2="660" Y2="60"
                 Stroke="Black"
-                StrokeThickness="1" Canvas.Left="416" Width="121" Canvas.Top="492" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
+                StrokeThickness="1" Canvas.Left="418" Width="120" Canvas.Top="493" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" >
                 <Line.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -117,7 +117,7 @@
                 Height="40"
                 Width="330"
                 HorizontalAlignment="Left"
-                Canvas.Left="352"
+                Canvas.Left="350"
                 Canvas.Top="264"
                 VerticalAlignment="Center"
                 ItemsSource="{Binding Distances}"
@@ -146,8 +146,8 @@
             <Label
                 FontSize="20"
                 Height="40"
-                Width="400"
-                Margin="10 388 0 0"
+                Width="388"
+                Margin="1 389 0 10"
                 Content="{Binding SuccessRateMessage}" />
         </StackPanel>
     </Grid>
