removed KNN config

--- a/8INF957-MS_TP1/TP1_app_BLP/Views/Accueil.xaml
+++ b/8INF957-MS_TP1/TP1_app_BLP/Views/Accueil.xaml
@@ -22,8 +22,8 @@
         <TabItem Header="Diagnostique">
             <usercontrols:DiagnosticUserControl/>
         </TabItem>
-        <TabItem Header="Configuration IA">
+        <!--<TabItem Header="Configuration IA">
             <usercontrols:ConfigIaUserControl/>
-        </TabItem>
+        </TabItem>-->
     </TabControl>
 </Window>
