--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Account/login.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Account/login.cshtml
@@ -12,11 +12,11 @@
             <form asp-action="login" method="post">
                 <div class="form-group">
                     <label>User Name</label>
-                    <input type="text" class="form-control" id="userName" name="userName" placeholder="Enter user name">
+                    <input required type="text" class="form-control" id="userName" name="userName" placeholder="Enter user name">
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                    <input required type="password" class="form-control" name="password" id="password" placeholder="Password">
                 </div>
                 <div class="form-check">
                     <button class="btn btn-info" type="reset">Reset</button>
