--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 	<header>
 		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
 			<div class="container-fluid">
-				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TP2 8INF957 MS</a>
+				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Informations">TP2 8INF957 MS</a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -33,6 +33,9 @@
 					</ul>
 				</div>
 			</div>
+			 <div class="float-right">
+				 <a class="nav-link" asp-controller="Account" asp-action="Logout">Déconnexion</a>
+			 </div>
 		</nav>
 	</header>
 	<div class="container">
