--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
@@ -33,9 +33,12 @@
 					</ul>
 				</div>
 			</div>
-			 <div class="float-right">
-				 <a class="nav-link" asp-controller="Account" asp-action="Logout">Déconnexion</a>
-			 </div>
+			@if(User.Identity.IsAuthenticated) 
+			{
+				<div class="float-right">
+					<a class="nav-link" asp-controller="Account" asp-action="Logout">Déconnexion</a>
+				</div>
+			}
 		</nav>
 	</header>
 	<div class="container">
