--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Account/login.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Account/login.cshtml
@@ -1,26 +1,26 @@
 ﻿@{
-     Layout = "~/Views/Shared/_Layout.cshtml";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container">
-    <div class="row">        
-        <div class="col-md-5">
-            <h2><strong>Login Page </strong></h2><br />
-            <form asp-action="login" method="post">
-                <div class="form-group">
-                    <label>User Name</label>
-                    <input required type="text" class="form-control" id="userName" name="userName" placeholder="Enter user name">
-                </div>
-                <div class="form-group">
-                    <label>Password</label>
-                    <input required type="password" class="form-control" name="password" id="password" placeholder="Password">
-                </div>
-                <div class="form-check mt-3 p-0">
-                    <button type="reset" class="btn btn-info mx-1">Annuler</button>
-                    <button type="submit" class="btn btn-primary mx-1">Connexion</button>
-                </div>
-            </form>
-        </div>
-    </div>
+	<div class="row">
+		<div class="col-md-5">
+			<h2><strong>Login Page</strong></h2><br/>
+			<form asp-action="login" method="post">
+				<div class="form-group">
+					<label>User Name</label>
+					<input required type="text" class="form-control" id="userName" name="userName" placeholder="Enter user name">
+				</div>
+				<div class="form-group">
+					<label>Password</label>
+					<input required type="password" class="form-control" name="password" id="password" placeholder="Password">
+				</div>
+				<div class="form-check mt-3 p-0">
+					<button class="btn btn-info mx-1">Créer Compte</button> <!--TODO-->
+					<button type="submit" class="btn btn-primary mx-1">Connexion</button>
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
 
