--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 			@if(User.Identity.IsAuthenticated) 
 			{
 				<div class="container-fluid">
-					<a class="navbar-brand" asp-controller="Informations" asp-action="Index">TP2 8INF957 MS</a>
+					<a class="navbar-brand" asp-controller="Account" asp-action="Informations">TP2 8INF957 MS</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 							aria-expanded="false" aria-label="Toggle navigation">
 						<span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
 					<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 						<ul class="navbar-nav flex-grow-1">
 							<li class="nav-item">
-								<a class="nav-link" asp-controller="Informations" asp-action="Index">Informations</a>
+								<a class="nav-link" asp-controller="Account" asp-action="Informations">Informations</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" asp-controller="Informations" asp-action="Diagnostique">Diagnostique</a>
@@ -43,6 +43,7 @@
 	</header>
 	<div class="container">
 		<main role="main" class="pb-3">
+			<h1>@ViewData["Title"]</h1>
 			@RenderBody()
 		</main>
 	</div>
