--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Account/NewAccount.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Account/NewAccount.cshtml
@@ -6,9 +6,10 @@
 }
 @model RestApi.Models.Doctor
 
-<form class="form" asp-action="NewAccount">
+<form class="form col-md-5" asp-action="NewAccount">
 	<partial name="Shared/_login" />
 	<partial name="Shared/_Informations" model="Model" />
+	<br />
 	<div>
 		<button type="submit" class="btn btn-secondary" style="background-color :green">Créer</button>
 		<button type="button" onclick="location.href='@Url.Action("Login","Account")';" class="btn btn-secondary" style="background-color :red">Annuler</button>
