--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
 								<a class="nav-link" asp-controller="Informations" asp-action="Diagnostique">Diagnostique</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" asp-controller="Informations" asp-action="ConfigurationIA">Configuration IA</a>
+								<a class="nav-link" asp-controller="ConfigurationIa" asp-action="Index">Configuration IA</a>
 							</li>
 						</ul>
 					</div>
