--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Account/Shared/_Informations.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Account/Shared/_Informations.cshtml
@@ -6,17 +6,17 @@
 	<label for="Nom">Nom</label>
 	<input type="text" asp-for="LastName" id="Nom" class="form-control" placeholder="Nom" />
 	<span asp-validation-for="LastName" class="text-danger"></span>
-</div><br />
+</div>
 <div class="form-group">
 	<label for="Prénom">Prénom</label>
 	<input type="text" asp-for="FirstName" id="Prénom" class="form-control" placeholder="Prénom" />
 	<span asp-validation-for="FirstName" class="text-danger"> </span>
-</div><br />
+</div>
 <div class="form-group">
 	<label for="DateNaissance">Date Naissance</label>
 	<input type="text" asp-for="Birthdate" id="DateNaissance" class="form-control" placeholder="Date" />
 	<span asp-validation-for="Birthdate" class="text-danger"></span>
-</div><br />
+</div>
 <div>
 	<label for="genre">Je suis</label>
 	@Html.RadioButtonFor(d => d.Gender, GenderEnum.Man)
@@ -24,7 +24,7 @@
 	@Html.RadioButtonFor(d => d.Gender, GenderEnum.Woman)
 	@Html.Label("Femme")
 	<span asp-validation-for="Gender" class="text-danger"></span>
-</div><br />
+</div>
 <div>
 	<label for="Ville">Ville</label>
 	<select asp-for="City">
@@ -35,14 +35,14 @@
 		<option value="Riviere-du-Loup" asp-for="City">Rivière-du-Loup</option>
 		<span asp-validation-for="City" class="text-danger"></span>
 	</select>
-</div><br />
+</div>
 <div class="form-group">
 	<label for="DateDebut">Date début carière</label>
 	<input type="text" asp-for="DateEntryOffice" id="DateDebut" class="form-control" placeholder="Date" />
 	<span asp-validation-for="DateEntryOffice" class="text-danger"></span>
-</div><br />
+</div>
 <div>
 	<label for="Email">Adresse email</label>
 	<input type="text" asp-for="Email" id="Email" class="form-control" placeholder="Email" />
 	<span asp-validation-for="Email" class="text-danger"></span>
-</div><br />
+</div>
