--- a/8INF957-MS_TP2/8INF957-MS_TP2/Views/Diagnostique/Index.cshtml
+++ b/8INF957-MS_TP2/8INF957-MS_TP2/Views/Diagnostique/Index.cshtml
@@ -1,30 +1,26 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-
 @using _8INF957_MS_TP2.Models
 @{
 	ViewData["Title"] = "Diagnostique";
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
+@model IEnumerable<RestApi.Models.Patient>
 
-@model PatientsList
-
-<form asp-action="Diagnose">
-	<div class="mb-3">
-		@Html.DropDownListFor(m => m.SelectedPatientId, Model.Patients)
-		<input class="btn btn-secondary" type="submit" value="Informations" asp-controller="Home" asp-action="ViewPatient" a href="~/Home/Informations" />
-		<input class="btn btn-secondary" type="submit" value="Ajouter un patient" asp-controller="Home" asp-action="AddPatient" a href="~/Home/AjoutPatient" />
-	</div>
+<form asp-controller="Diagnostique">
+	@Html.DropDownList("id", Model.Select(p => new SelectListItem(p.ToString(), p.Id.ToString())))
+	<input class="btn btn-secondary" type="submit" value="Informations" asp-action="ViewPatient" />
+	<input class="btn btn-secondary" type="submit" value="Ajouter un patient" asp-action="AddPatient" />
 </form>
 <form>
 	<fieldset class="border p-2">
 		<legend class="float-none w-auto">Paramètres</legend>
 		<div class="mb-3">
-			@Html.LabelFor(m => m.SelectedPatientId)
-			@Html.DropDownListFor(m => m.SelectedPatientId, Model.Patients)
+			@*@Html.LabelFor(m => m.SelectedPatientId)*@
+			@*@Html.DropDownListFor(m => m.SelectedPatientId, Model)*@
 		</div>
 		<div class="mb-3">
-			@Html.LabelFor(m => m.SelectedPatientId)
-			@Html.DropDownListFor(m => m.SelectedPatientId, Model.Patients)
+			@*@Html.LabelFor(m => m.SelectedPatientId)*@
+			@*@Html.DropDownListFor(m => m.SelectedPatientId, Model)*@
 		</div>
 		<div class="mb-3">
 			<label for="oldpeak">Dépression ST induite par l'exercice par rapport au repos</label>
